# imgwriter

./: .gitignore  Makefile  Pipfile  README.rst  precommit.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: requirements.rst
docs/source/: api.rst  conf.py  examples.rst  index.rst
examples/: make_color_fade.py  make_spacer.py
imgwriter/: __init__.py  __version__.py  imgreader.py  imgwriter.py
src/imgwriter/: __init__.py  common.py  imgreader.py  imgwriter.py
tests/: build_data.py  test_examples.py  test_imgreader.py  test_imgwriter.py
tests/data/: __test_save_fpc_video.avi  __test_save_fpg_video.avi  __test_save_rgb_video.avi
